# banking-realtime-warehouse

./: .gitignore  README.md  docker-compose.airflow3.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile.airflow
airflow/dags/: dbt_wh_dags.py
architecture/: architecture_diagram.drawio  data_flow.drawio  db_schema.drawio  star_schema.drawio
config/: airflow.cfg
kafka-debezium/: Dockerfile.debezium  sink_connector.py  source_connector.py
postgres/: create_tables.sql  trigger_updated_at.sql
realtime_banking_dbt/: .user.yml  dbt_project.yml
realtime_banking_dbt/macros/: positive_test.sql
realtime_banking_dbt/models/: schema.yml  sources.yml
realtime_banking_dbt/models/marts/: agg_daily_account_activity.sql  dim_accounts.sql  dim_customers.sql  fct_transactions.sql  map_account_owner.sql
realtime_banking_dbt/models/staging/: stg_accounts.sql  stg_customers.sql  stg_customers_accounts.sql  stg_transactions.sql
realtime_banking_dbt/snapshots/: snap_accounts.sql
scripts/: data_faker.py
